--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
     "@types/multer": "^1.4.7",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "babel-jest": "^29.6.4",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.2",
     "supertest": "^6.3.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
